Fix: Fixes wrong padding when screen width larger than 1200px.

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -171,6 +171,9 @@ select.form-control {
     }
 }
 @media (min-width: 768px) {
+    .navbar .navbar-brand {
+        padding-left: 30px;
+    }
     #times {
         max-height: 400px;
     }
